fixed event contact spacing part2

--- a/master_style.css
+++ b/master_style.css
@@ -1011,6 +1011,7 @@ a>.schedule:hover {
 
 	.img-circle {
 		max-width:100%;
+		max-height:100%;
 		margin:auto;
 		text-align:center;
 		margin-bottom:20px;
